# rules_kotlin_jvm

./: .bazelrc  MODULE.bazel  README.md  maven_install.json  rules_kotlin_jvm_dependencies.bzl
.github/workflows/: build-test.yml  lint.yml
imports/com/google/common/: BUILD.bazel
imports/com/google/protobuf/: BUILD.bazel
imports/com/google/protobuf/kotlin/: BUILD.bazel
imports/io/gprc/: BUILD.bazel
imports/io/gprc/kotlin/: BUILD.bazel
imports/io/gprc/protobuf/: BUILD.bazel
imports/io/gprc/stub/: BUILD.bazel
imports/kotlin/: BUILD.bazel
imports/kotlin/reflect/: BUILD.bazel
imports/kotlin/test/: BUILD.bazel
imports/kotlinx/coroutines/: BUILD.bazel
kotlin/: BUILD.bazel  defs.bzl
kotlin/internal/: BUILD.bazel  common.bzl  grpc_library.bzl  library.bzl  proto_library.bzl
