load("@rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_kotlinc_options")

package(default_visibility = ["//visibility:public"])

kt_kotlinc_options(
    name = "default_opts",
    include_stdlibs = "none",
    x_optin = ["kotlin.RequiresOptIn"],
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    jvm_target = "11",
    kotlinc_options = ":default_opts",
)
