load("@rules_kotlin//kotlin:core.bzl", "kt_kotlinc_options")

package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "extract_srcjars",
    srcs = ["extract_srcjars.sh"],
)

kt_kotlinc_options(
    name = "proto_gen_kt_options",
    include_stdlibs = "none",
    warn = "off",
)
